# py_noir_adam

./: .gitignore  README.md  config_example.conf  main.py  pyproject.toml
config/: config.conf
projects/: project_switch.py
projects/CometeMoelle/: comete_moelle_json_generator.py
projects/ExecutionSerializer/: ecan.py  flair.py  main.py  pmap.py  siena.py  sienax.py  sims.py  t2stir.py
projects/ExecutionTools/: carmin_api_test.py  output_extraction.py  post_processing.py  tracking_file_download.py  vip_logs_import.py
projects/ShanoirTools/: dicom_metadata_download.py
projects/eCAN/: eCAN.py
projects/execution_serializer/: ecan.py  flair.py  pmap.py  siena.py  sienax.py  sims.py  t2stir.py
projects/execution_tools/: carmin_api_test.py  output_extraction.py  post_processing.py  tracking_file_download.py  vip_logs_import.py
projects/shanoir_tools/: dicom_metadata_download.py
py_noir/: main.py
py_noir_code/projects/: context_example.conf  main_example.py
resource/save_file/: initial_Comete_FLAIR.json  initial_Comete_PMAP.json  initial_Comete_T2STIR.json  initial_Siena.json  initial_sims.json
resources/WIP_files/: Comete_T2STIR.json
resources/save_files/: initial_Comete_FLAIR.json  initial_Comete_PMAP.json  initial_SIMS.json  prod_save.json  tempo.json
src/API/: api_config.py  api_service.py
src/execution/: execution_config.py  execution_init_service.py  execution_management_service.py  execution_service.py  execution_tracking.py
src/orthanc/: orthanc_config.py  orthanc_service.py
src/security/: authentication_service.py
(+127 files in other folders)
